fix(nav menu) add scroll on mobile toggle menu

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -112,7 +112,6 @@ button {
   background-color: #fff;
   border-top: 1px solid #e9e9e9;
   border-bottom: 1px solid #e9e9e9;
-  height: 100%;
  }
 
  // .menu__nav
@@ -519,14 +518,16 @@ i.separator {
   border-top: 0;
   border-right: 1px solid #e9e9e9;
   background-color: #fff;
-  // display: none;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
 
   .menu__inner {
    display: block;
    background-color: #fff;
    border-top: 0;
    border-bottom: 0;
-   height: 100%;
+   // height: 100%;
    padding: 0;
   }
   .menu__nav {
